<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:myContext=".view.MoviesDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rv_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/poster_path"
            android:layout_width="102dp"
            android:layout_height="139dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/todo_photo_movie"
            android:src="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.086"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998" />

        <ImageView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/todo_photo_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/progressDetailMovie"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tahun"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_path"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tahun_pembuatan"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/poster_path"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_vote"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toEndOf="@+id/release_date"
            app:layout_constraintTop_toBottomOf="@+id/poster_path"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/poster_path"
            app:layout_constraintVertical_bias="0.25" />


        <TextView
            android:id="@+id/original_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name_heroes"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/vote_average"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_path"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/deskripsi"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints,RtlHardcoded" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="100dp"
            android:layout_height="59dp"
            android:layout_marginBottom="44dp"
            android:text="@string/rating_nya"
            android:textAlignment="center"
            android:textSize="18pt"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/btn_submits"
            app:layout_constraintEnd_toEndOf="@+id/original_title"
            app:layout_constraintStart_toStartOf="@+id/original_title"
            app:layout_constraintTop_toBottomOf="@+id/original_title" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rating"
            android:textSize="10pt"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/vote_average"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="@+id/vote_average"
            app:layout_constraintTop_toBottomOf="@+id/vote_average" />


        <Button
            android:id="@+id/btn_submits"
            android:layout_width="114dp"
            android:layout_height="41dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_favorite"
            android:text="@string/favorit"
            app:layout_constraintBottom_toTopOf="@+id/vote_count"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.443"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btn_deletes"
            android:layout_width="114dp"
            android:layout_height="41dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_clear"
            android:text="@string/delete"
            app:layout_constraintBottom_toTopOf="@+id/vote_count"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.443"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>