<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/rounded">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="98dp"
            android:layout_height="167dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/todo_photo_movie"
            android:scaleType="fitXY"
            android:src="@drawable/pikachu"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/name_heroes"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_photo"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@id/txt_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/lorem"
            card_view:layout_constraintBottom_toTopOf="@+id/txt_genres"
            card_view:layout_constraintEnd_toEndOf="@+id/txt_name"
            card_view:layout_constraintStart_toStartOf="@+id/txt_name"
            card_view:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:id="@+id/txt_genre1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_alignBottom="@+id/txt_tahun2"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/vote"
            card_view:layout_constraintBottom_toTopOf="@+id/txt_tahun2"
            card_view:layout_constraintEnd_toEndOf="@+id/txt_tahun2"
            card_view:layout_constraintStart_toEndOf="@+id/img_photo" />

        <TextView
            android:id="@+id/txt_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt_genre1"
            android:layout_alignTop="@+id/txt_genre1"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/action"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/txt_genre1"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/txt_genre1"
            card_view:layout_constraintTop_toTopOf="@+id/txt_genre1" />

        <TextView
            android:id="@+id/txt_tahun2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/tahun"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_photo"
            card_view:layout_constraintStart_toEndOf="@+id/img_photo" />

        <TextView
            android:id="@+id/txt_tahun"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_alignStart="@+id/txt_tahun2"
            android:layout_alignTop="@+id/txt_tahun2"
            android:layout_alignBottom="@+id/txt_tahun2"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:text="@string/tahun_pembuatan"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/txt_tahun2"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/txt_tahun2"
            card_view:layout_constraintTop_toTopOf="@+id/txt_tahun2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
